# dd

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.scraper  README.md  index.html  style.css
.github/workflows/: baremetal-production-deploy.yml  baremetal-staging-deploy.yml  build-image.yml  ci.yml  cleanup.yml  deploy-cp.yml  deploy-workload.yml  force-cleanup-stale-prs.yml  force-cleanup-tunnels.yml  local-agents.yml  pr-teardown.yml  production-deploy.yml  push-management-images.yml  release-bastion.yml  release.yml  retire-staging.yml  scraper-image.yml  set-agent-owner.yml  staging-deploy.yml  website-pr-preview.yml  website-preview.yml  website.yml
agent/: Cargo.toml
agent/src/: api.rs  container.rs  lib.rs  local_control.rs  noise.rs  process.rs  server.rs  tunnel.rs
agent/src/attestation/: insecure.rs  ita.rs  mod.rs  tsm.rs
agent/src/common/: error.rs
agent/src/server/: register.rs
agent/web/: noise-client.js  terminal.html
apps/: README.md
apps/_infra/: dd-dogfood.sh  dd-relaunch-cp.sh  dd-relaunch.sh  ee-sync.sh  local-agents.sh  local-cp.sh
apps/bastion/: workload.json  workload.json.tmpl
apps/busybox/: workload.json.tmpl
apps/ca-certificates/: workload.json.tmpl
apps/cloudflared/: workload.json
apps/codex-podman-shell/: workload.json
apps/codex-universal-shell/: workload.json
apps/confidential-shell/: workload.json
apps/dd-agent/: workload.json.tmpl
apps/dd-management/: workload.json.tmpl
apps/dd-sessiond/: workload.json.tmpl
apps/dd-shell/: workload.json  workload.json.tmpl
apps/ee-proxy/: workload.json.tmpl
apps/hello-world/: workload.json
apps/human-readonly/: workload.json
apps/mount-data/: workload.json
apps/mount-models/: workload.json
apps/nv/: workload.json
apps/oracle-readonly/: workload.json
apps/podman-bootstrap/: workload.json
apps/provider/: Cargo.toml  Dockerfile
apps/provider/src/: aggregator.rs  attestation.rs  config.rs  inspection.rs  main.rs  reporting.rs  signing.rs
apps/scraper/: deploy.json
apps/tmuxrs/: workload.json
apps/ttyd/: workload.json
apps/vllm/: workload.json
apps/web-nvidia-smi/: workload.json
control-plane/: Cargo.toml
control-plane/migrations/: 0001_init.sql  0002_add_last_attested_at.sql  0002_measurer_trust.sql  0002_multi_deployment.sql  0003_app_store.sql  0003_provider_skus.sql  0004_agent_attestation_token.sql  0005_app_ownership.sql
control-plane/src/: api.rs  config.rs  db.rs  lib.rs  state.rs  types.rs
control-plane/src/attestation/: ita.rs  mod.rs
control-plane/src/auth/: admin_session.rs  api_key.rs
control-plane/src/common/: error.rs
control-plane/src/routes/: accounts.rs  admin.rs  agents.rs  apps.rs  attestation.rs  auth.rs  deploy.rs  deployments.rs  health.rs  measurers.rs  migration.rs  mod.rs  providers.rs  stats.rs  ui.rs  ui_root.html
control-plane/src/services/: attestation.rs  github_oidc.rs  ita_client.rs  migration.rs  mod.rs  nonce.rs  tunnel.rs
control-plane/src/stores/: account.rs  agent.rs  app.rs  deployment.rs  health.rs  measurer.rs  mod.rs  provider.rs  session.rs  setting.rs
control-plane/tests/: registration_flow.rs
crates/bastion/: Cargo.toml  LICENSE-MIT  README.md
crates/bastion/examples/: standalone.rs
crates/bastion/src/: capture.rs  ee.rs  ee_sync.rs  lib.rs  noise.rs  page.html
crates/bastion/web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/bastion/web/src/: App.svelte  connectors.ts  identity.ts  main.ts  noise.test.ts  noise.ts  tunnel.ts  types.ts  ui.svelte.ts
crates/bastion/web/src/lib/: Sidebar.svelte  TerminalPane.svelte
crates/dd/: Cargo.toml
crates/dd-agent/: Cargo.toml  README.md
crates/dd-agent/src/: main.rs
crates/dd-client/: Cargo.toml  Dockerfile
crates/dd-client/src/: auth.rs  config.rs  dashboard.rs  lib.rs  main.rs  terminal.rs
crates/dd-common/: Cargo.toml
crates/dd-common/src/: ee_client.rs  error.rs  lib.rs  noise.rs  noise_static.rs  noise_tunnel.rs  tunnel.rs
crates/dd-register/: Cargo.toml  Dockerfile
crates/dd-register/src/: handler.rs  ita.rs  lib.rs  main.rs
crates/dd-web/: Cargo.toml  Dockerfile
crates/dd-web/src/: auth.rs  collector.rs  config.rs  federate.rs  fleet.rs  html.rs  lib.rs  main.rs  router.rs  state.rs  terminal.rs
crates/dd/src/: agent.rs  cf.rs  config.rs  cp.rs  devices.rs  ee.rs  error.rs  gh_oidc.rs  lib.rs  main.rs  noise_m2m.rs  noise_rpc.rs  stonith.rs
crates/dd/src/noise_gateway/: attest.rs  mod.rs  upstream.rs
crates/ee-proxy/: Cargo.toml
crates/ee-proxy/src/: attest.rs  lib.rs  noise.rs  trust.rs  upstream.rs
docs/: rewrite-plan.md  sessiond-central-ui-plan.md  spec-v2.md  threat-model-v2.md
examples/hello-world/: Dockerfile  index.html
images/: Makefile  build.sh  flake.nix  mkosi.build.chroot  mkosi.conf  mkosi.finalize
images/packer/: baremetal-agent-image.pkr.hcl  provision-agent-image.sh  provision-baremetal-image.sh
infra/: README.md  STATUS.md
infra/ansible/: ansible.cfg
infra/scripts/: vm-launch.sh  vm-status.sh  vm-stop.sh
issues/todo/: 001-understand-infra-and-staging.md
openapi/: control-plane.yaml
pr-preview/pr-124/: index.html
pr-preview/pr-129/: style.css
pr-preview/pr-17/: index.html
pr-preview/pr-225/: index.html
pr-preview/pr-231/: Cargo.toml  Dockerfile  README.md  index.html
pr-preview/pr-232/: README.md
pr-preview/pr-233/: README.md
pr-preview/pr-234/: CNAME
scripts/: dd-relaunch.sh  gcp-deploy.sh  install-agent.sh  local-agents.sh  ollama-deploy.sh  redeploy-workload.sh  run-local-vm.sh  test-installer.sh  vm-startup.sh  workloads.sh
scripts/envs/: agent.env.tmpl  cp.env.tmpl  (+1 more)
src/: agent.rs  auth.rs  cf.rs  cf_map.rs  cf_reconcile.rs  cf_snapshot.rs  collector.rs  config.rs  cp.rs  deployment.rs  devices.rs  ee.rs  env.rs  gh_oidc.rs  history.rs  html.rs  ita.rs  lib.rs  log.rs  main.rs  metrics.rs  noise.rs  noise_client.rs  oracle.rs  sessiond.rs  shell.rs  stonith.rs  taint.rs  terminal.rs  units.rs  webtmux.rs  webtmux_page.html  workload.rs  workload_helpers.rs
website/: index.html  style.css
(+101 files in other folders)
