[package]
name = "devopsdefender"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/devopsdefender/dd"

[workspace]
members = [".", "crates/dd-agent"]
resolver = "2"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
futures-util = "0.3"
jsonwebtoken = "9"
libc = "0.2"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk", "network"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time", "fs", "net", "io-util", "sync"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3"
