[package]
name = "dd-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "dd_agent"
path = "src/lib.rs"

[[bin]]
name = "dd-agent"
path = "src/bin/dd-agent/main.rs"

[[bin]]
name = "dd-register"
path = "src/bin/dd-register/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
libc = "0.2"
jsonwebtoken = "9"
oci-unpack = "0.1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = { version = "0.10", features = ["default-resolver"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["serde", "v4"] }
