[package]
name = "dd-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "dd_agent"
path = "src/lib.rs"

[[bin]]
name = "dd-agent"
path = "src/bin/dd-agent/main.rs"

[[bin]]
name = "dd-register"
path = "src/bin/dd-register/main.rs"

[[bin]]
name = "dd-scraper"
path = "src/bin/dd-scraper/main.rs"

[[bin]]
name = "ddctl"
path = "src/bin/ddctl/main.rs"

[[bin]]
name = "dd-admin"
path = "src/bin/dd-admin/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bollard = "0.18"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = { version = "0.10", features = ["default-resolver"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time", "fs"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.10"
