[package]
name = "dd-cp"
version = "0.1.0"
edition = "2021"

[lib]
name = "dd_control_plane"
path = "src/lib.rs"

[[bin]]
name = "dd-cp"
path = "src/bin/dd-cp/main.rs"

[[bin]]
name = "dd-admin"
path = "src/bin/dd-admin/main.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "10"
argon2 = "0.5"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand_core = { version = "0.6", features = ["std"] }
thiserror = "2"
http = "1"
tower-http = { version = "0.6", features = ["cors"] }
rpassword = "7"

[dev-dependencies]
mockito = "1"
tower = { version = "0.5", features = ["util"] }
