[package]
name = "dd-provider"
version = "0.1.0"
edition = "2021"
description = "DD provider — capacity registration, measurement, health aggregation, and attestation for DC operators and cloud accounts"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
bollard = "0.18"
ed25519-dalek = { version = "2", features = ["rand_core"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand_core = { version = "0.6", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
futures-util = "0.3"
