[package]
name = "dd-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "dd_client"
path = "src/lib.rs"

[[bin]]
name = "dd-client"
path = "src/main.rs"

[dependencies]
dd-common = { path = "../dd-common" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
hostname = "0.4"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = "0.9"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time", "fs", "net", "io-util", "sync"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
urlencoding = "2"
uuid = { version = "1", features = ["serde", "v4"] }
