[package]
name = "dd-common"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "time"] }
uuid = { version = "1", features = ["v4"] }
