[package]
name = "dd-register"
version = "0.1.0"
edition = "2021"

[lib]
name = "dd_register"
path = "src/lib.rs"

[[bin]]
name = "dd-register"
path = "src/main.rs"

[dependencies]
dd-common = { path = "../dd-common" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
# libc: direct reboot(2) syscall for STONITH self-poweroff. Subprocess
# `poweroff` proved unreliable (busybox tries to signal a systemd-style
# PID 1, which easyenclave isn't, then no-ops).
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time", "fs", "net"] }
uuid = { version = "1", features = ["serde", "v4"] }
