[package]
name = "dd-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dd-web"
path = "src/main.rs"

[dependencies]
dd-common = { path = "../dd-common" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "net", "process"] }
uuid = { version = "1", features = ["serde", "v4"] }
