[package]
name = "devopsdefender"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "devopsdefender"
path = "src/main.rs"

[dependencies]
dd-register = { path = "../dd-register" }
dd-web = { path = "../dd-web" }
dd-client = { path = "../dd-client" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
