[package]
name = "ee-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Noise_IK + ITA-attested proxy in front of easyenclave's agent socket."
publish = false

[lib]
name = "ee_proxy"
path = "src/lib.rs"

[[bin]]
name = "ee-proxy"
path = "src/bin/ee-proxy.rs"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws", "macros"] }
base64 = "0.22"
futures-util = "0.3"
hex = "0.4"
libc = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snow = { version = "0.9", default-features = false, features = ["default-resolver"] }
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
